--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ body {
     color: #333;
     padding: 20px;
     justify-content: center;
-    /* align-items: center; */
     flex-direction: column;
 }
 
@@ -19,8 +18,12 @@ body.landing-page {
     justify-content: center;
     align-items: center;
     text-align: center;
-    min-height: 100vh;
+    min-height: 95vh;
     padding-top: 0;
+}
+
+a {
+    text-decoration: none;
 }
 
 h1 {
@@ -30,42 +33,83 @@ h1 {
     color: #333;
 }
 
-nav {
-    text-align: center;
-    margin-bottom: 20px;
-    background-color: #4169E1;
-    padding: 10px;
-    border-radius: 5px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+h2 {
+    margin-bottom: 10px; /* space between header and navbar */
+    color: #333;
 }
 
-nav ul {
-    list-style-type: none; /* Removes default bullet points */
+ul {
+    list-style-type: none;
+    margin: 0;
     padding: 0;
+    border-radius: 5px;
+    overflow: hidden;
+    background-color: #4169E1;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     display: flex;
     justify-content: center; /* Centers the items horizontally */
     flex-wrap: wrap; /* Allows items to wrap in case of smaller screen */
+    margin-bottom: 30px;
+}
+  
+li {
+    float: left;
 }
 
-nav ul li {
-    margin: 4px 15px;
-}
-
-nav ul li a {
-    text-decoration: none;
+li a, .dropbtn {
+    min-width: 150px;
+    display: inline-block;
     color: white;
-    font-size: 17px;
-    padding: 7px 20px;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
 }
 
-body.landing-page nav ul li a {
-    font-size: 20px;
+li a:hover, .dropdown:hover .dropbtn {
+    background-color: #2e54c7;
+    }
+
+li.dropdown {
+    display: inline-block;
 }
 
-nav ul li a:hover {
-    background-color: #2e54c7; /* darker color on hover */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 150px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1;}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.content {
+    margin-left: 25px;
+}
+
+p {
+    margin-bottom: 5px;
+}
+
+input {
+    margin-bottom: 5px;
+}
+
+button {
+    margin-bottom: 5px;
 }
 
 /* responsive design for mobile devices */
