started flask and jinja templates

--- a/templates/home.html
+++ b/templates/home.html
@@ -4,11 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Database Manager</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     </head>
 
     <body class="landing-page">
-        <a href="main.html"><h1>Database Manager</h1></a>
+        <a href="home.html"><h1>Database Manager</h1></a>
 
         <ul>
             <li class="dropdown">
