Added add_post to flask app

--- a/templates/home.html
+++ b/templates/home.html
@@ -8,15 +8,15 @@
     </head>
 
     <body class="landing-page">
-        <a href="home.html"><h1>Database Manager</h1></a>
+        <a href=""><h1>Database Manager</h1></a>
 
         <ul>
             <li class="dropdown">
                 <a href="" class="dropbtn">Data Entry</a>
                 <div class="dropdown-content">
                     <a href="add_user.html">Add User</a>
-                    <a href="add_project.html">Add Project</a>
-                    <a href="add_post.html">Add Post</a>
+                    <a href="">Add Project</a>
+                    <a href="{{ url_for('add_post') }}">Add Post</a>
                     <a href="add_ptp.html">Add Post to Project</a>
                     <a href="add_result.html">Add Result</a>
                 </div>
