--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
-    {% include 'navbar.html' %}
+    <a href=""><h1>Database Manager</h1></a>
+    {% include 'nav.html' %}
 
     <div class="content">
         {% block content %}{% endblock %}
