--- a/templates/nav.html
+++ b/templates/nav.html
@@ -3,8 +3,8 @@
         <a href="" class="dropbtn">Data Entry</a>
         <div class="dropdown-content">
             <a href="add_user.html">Add User</a>
-            <a href="add_project.html">Add Project</a>
-            <a href="add_post.html">Add Post</a>
+            <a href="{{ url_for('add_project') }}">Add Project</a>
+            <a href="{{ url_for('add_post') }}">Add Post</a>
             <a href="add_ptp.html">Add Post to Project</a>
             <a href="add_result.html">Add Result</a>
         </div>
