--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
-    <a href=""><h1>Database Manager</h1></a>
+    <a href="{{ url_for('index') }}"><h1>Database Manager</h1></a>
     {% include 'nav.html' %}
 
     <div class="content">
