--- a/templates/home.html
+++ b/templates/home.html
@@ -8,14 +8,14 @@
     </head>
 
     <body class="landing-page">
-        <a href=""><h1>Database Manager</h1></a>
+        <a href="{{ url_for('index') }}"><h1>Database Manager</h1></a>
 
         <ul>
             <li class="dropdown">
                 <a href="" class="dropbtn">Data Entry</a>
                 <div class="dropdown-content">
                     <a href="add_user.html">Add User</a>
-                    <a href="">Add Project</a>
+                    <a href="{{ url_for('add_project') }}">Add Project</a>
                     <a href="{{ url_for('add_post') }}">Add Post</a>
                     <a href="add_ptp.html">Add Post to Project</a>
                     <a href="add_result.html">Add Result</a>
