database connection on flask app

--- a/templates/add_project.html
+++ b/templates/add_project.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Add Post{% endblock %}
+{% block title %}Add Project - Database Manager{% endblock %}
 
 {% block content %}
 
