--- a/static/styles.css
+++ b/static/styles.css
@@ -36,6 +36,7 @@ h1 {
 h2 {
     margin-bottom: 10px; /* space between header and navbar */
     color: #333;
+    font-size: 1.25rem;
 }
 
 ul {
@@ -105,6 +106,10 @@ p {
 }
 
 input {
+    margin-bottom: 5px;
+}
+
+select {
     margin-bottom: 5px;
 }
 
