--- a/templates/add_post.html
+++ b/templates/add_post.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Add Post{% endblock %}
+{% block title %}Add Post - Database Manager{% endblock %}
 
 {% block content %}
 
