--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -1,23 +1,45 @@
 {% extends 'base.html' %}
 
-{% block title %}Add Post{% endblock %}
+{% block title %}Add User - Database Manager{% endblock %}
 
 {% block content %}
 
-<script src="{{ url_for('static', filename='add_post.js') }}"></script>
+<!-- Display flash messages -->
+{% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+        <div class="flash-messages">
+            {% for category, message in messages %}
+                <div class="alert alert-{{ category }}">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        </div>
+    {% endif %}
+{% endwith %}
 
 <h2>Enter user data</h2>
 <form method="POST">
-    <label for="project_name">Project Name:</label>
-    <input type="text" name="project_name"><br>
-    <label for="manager">Project Manager:</label>
-    <input type="text" name="manager"><br>
-    <label for="institute">Institute:</label>
-    <input type="text" name="institute"><br>
-    <label for="start">Start Date:</label>
-    <input type="date" name="start"><br>
-    <label for="end">End Date:</label>
-    <input type="date" name="end"><br>
+    <label for="username">Username:</label> <input type="text" name="username" required><br>
+    <label for="social_media">Social Media:</label> <input type="text" name="social_media" required><br>
+    <label for="first_name">First Name:</label> <input type="text" name="first_name" required><br>
+    <label for="last_name">Last Name:</label> <input type="text" name="last_name" required><br>
+    <label for="country_birth">County of Birth:</label> <input type="text" name="country_birth" required><br>
+    <label for="country_residence">County of Residence:</label> <input type="text" name="country_residence" required><br>
+    <label for="age">Age:</label> <input type="number" name="age" required><br>
+
+    <label for="gender">Gender:</label>
+    <select name="gender" id="gender" required>
+        <option value="" disabled selected></option>
+        <option value="female">Female</option>
+        <option value="male">Male</option>
+    </select><br>
+
+    <label for="verified">Is the user verified?</label>
+    <select name="verified" id="verified" required>
+        <option value="" disabled selected></option>
+        <option value="yes">Yes</option>
+        <option value="no">No</option>
+    </select><br><br>
 
     <input type="submit" value="Submit">
 </form>
