--- a/templates/home.html
+++ b/templates/home.html
@@ -14,11 +14,11 @@
             <li class="dropdown">
                 <a href="" class="dropbtn">Data Entry</a>
                 <div class="dropdown-content">
-                    <a href="add_user.html">Add User</a>
+                    <a href="{{ url_for('add_user') }}">Add User</a>
                     <a href="{{ url_for('add_project') }}">Add Project</a>
                     <a href="{{ url_for('add_post') }}">Add Post</a>
-                    <a href="add_ptp.html">Add Post to Project</a>
-                    <a href="add_result.html">Add Result</a>
+                    <a href="{{ url_for('add_ptp') }}">Add Post to Project</a>
+                    <a href="{{ url_for('add_result') }}">Add Result</a>
                 </div>
             </li>
             <li class="dropdown">
