--- a/templates/add_post.html
+++ b/templates/add_post.html
@@ -4,15 +4,46 @@
 
 {% block content %}
 
-<script src="{{ url_for('static', filename='add_post.js') }}"></script>
+<!-- Display flash messages -->
+{% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+        <div class="flash-messages">
+            {% for category, message in messages %}
+                <div class="alert alert-{{ category }}">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        </div>
+    {% endif %}
+{% endwith %}
 
 <h2>Enter post data</h2>
-<form method="POST">
+<form method="POST" action="/add-post">
     <div id="posts-container">
-        <!-- posts will go here -->
-    </div>
+        <label for="username">Username:</label> <input type="text" name="username" required><br>
+        <label for="social_media">Social Media Platform:</label> <input type="text" name="social_media" required><br>
+        <label for="time_posted">Time Posted:</label> <input type="datetime-local" name="time_posted" required><br>
+        <label for="text">Text:</label> <input type="text" name="text" required><br>
+        <label for="city">City:</label> <input type="text" name="city" required><br>
+        <label for="state">State:</label> <input type="text" name="state" required><br>
+        <label for="country">Country:</label> <input type="text" name="country" required><br>
+        <label for="num_likes">Number of Likes:</label> <input type="number" name="num_likes" required><br>
+        <label for="num_dislikes">Number of Dislikes:</label> <input type="number" name="num_dislikes" required><br>
 
-    <button type="button" onclick="addPost()">Add Another Post</button><br><br>
+        <label for="multimedia">Does the post include multimedia?</label>
+        <select name="multimedia" id="multimedia" required>
+            <option value="" disabled selected></option>
+            <option value="yes">Yes</option>
+            <option value="no">No</option>
+        </select><br>
+
+        <label for="is_repost">Is the post a repost?</label>
+        <select name="is_repost" id="is_repost" required>
+            <option value="" disabled selected></option>
+            <option value="yes">Yes</option>
+            <option value="no">No</option>
+        </select><br><br>
+    </div>
 
     <input type="submit" value="Submit">
 </form>
