integrated add repost with backend

--- a/templates/add_post2.html
+++ b/templates/add_post2.html
@@ -7,13 +7,12 @@
 <h2>Enter original post data</h2>
 <form method="POST">
     <div id="posts-container">
-        <label for="orig_user">Username:</label> <input type="text" name="username[]" required><br>
-        <label for="orig_platform">Social Media Platform:</label> <input type="text" name="social_media[]" required><br>
-        <label for="orig_time">Time Posted:</label> <input type="datetime-local" name="time_posted[]" required><br>
+        <label for="orig_user">Username:</label> <input type="text" name="orig_user" required><br>
+        <label for="orig_platform">Social Media Platform:</label> <input type="text" name="orig_platform" required><br>
+        <label for="orig_time">Time Posted:</label> <input type="datetime-local" name="orig_time" required><br>
+        <label for="orig_text">Text:</label> <input type="text" name="orig_text" required><br>
         <br><br>
     </div>
-
-    <button type="button" onclick="addPost()">Add Another Post</button><br><br>
 
     <input type="submit" value="Submit">
 </form>
