integrated add post to project with backend

--- a/templates/add_ptp.html
+++ b/templates/add_ptp.html
@@ -9,6 +9,8 @@
     <label for="project_name">Project Name:</label>
     <input type="text" name="project_name"><br><br>
     <h2>Enter data for existing post</h2>
+    <label for="username">Username:</label>
+    <input type="text" name="username"><br>
     <label for="social_media">Social Media Platform:</label>
     <input type="text" name="social_media"><br>
     <label for="time_posted">Time Posted:</label>
