integrated add result with backend

--- a/templates/add_result2.html
+++ b/templates/add_result2.html
@@ -6,20 +6,15 @@
 
 <form method="POST">
     <h2>Enter the field for which you are entering a result</h2>
-    <label for="field">Field Name:</label>
-    <input type="text" name="field"><br><br>
+    <label for="field">Field Name:</label> <input type="text" name="field"><br><br>
 
     <h2>Enter the post for which you are entering a result</h2>
-    <label for="username">Username:</label>
-    <input type="text" name="field"><br>
-    <label for="media_platform">Social Media Platform:</label>
-    <input type="text" name="media_platform"><br>
-    <label for="time_posted">Time Posted:</label>
-    <input type="datetime-local" name="time_posted"><br><br>
+    <label for="username">Username:</label> <input type="text" name="username"><br>
+    <label for="media_platform">Social Media Platform:</label> <input type="text" name="media_platform"><br>
+    <label for="time_posted">Time Posted:</label> <input type="datetime-local" name="time_posted"><br><br>
 
     <h2>Enter result</h2>
-    <label for="result">Result:</label>
-    <input type="text" name="result"><br>
+    <label for="result">Result:</label> <input type="text" name="result"><br>
 
     <input type="submit" value="Submit">
 </form>
