--- a/templates/add_result.html
+++ b/templates/add_result.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<form action="{{ url_for('add_result2') }}" method="POST">
+<form action="{{ url_for('add_result') }}" method="POST">
     <h2>Enter project name</h2>
     <label for="project_name">Project Name:</label>
     <input type="text" name="project_name"><br><br>
