--- a/templates/add_ptp.html
+++ b/templates/add_ptp.html
@@ -6,15 +6,12 @@
 
 <form method="POST">
     <h2>Enter project name</h2>
-    <label for="project_name">Project Name:</label>
-    <input type="text" name="project_name"><br><br>
+    <label for="project_name">Project Name:</label> <input type="text" name="project_name" required><br><br>
+
     <h2>Enter data for existing post</h2>
-    <label for="username">Username:</label>
-    <input type="text" name="username"><br>
-    <label for="social_media">Social Media Platform:</label>
-    <input type="text" name="social_media"><br>
-    <label for="time_posted">Time Posted:</label>
-    <input type="datetime-local" name="time_posted"><br>
+    <label for="username">Username:</label> <input type="text" name="username" required><br>
+    <label for="social_media">Social Media Platform:</label> <input type="text" name="social_media" required><br>
+    <label for="time_posted">Time Posted:</label> <input type="datetime-local" name="time_posted" required><br>
 
     <input type="submit" value="Submit">
 </form>
