--- a/templates/add_result.html
+++ b/templates/add_result.html
@@ -6,8 +6,7 @@
 
 <form action="{{ url_for('add_result') }}" method="POST">
     <h2>Enter project name</h2>
-    <label for="project_name">Project Name:</label>
-    <input type="text" name="project_name"><br><br>
+    <label for="project_name">Project Name:</label> <input type="text" name="project_name" required><br><br>
 
     <input type="submit" value="Submit">
 </form>
