frontend for query posts page

--- a/templates/home.html
+++ b/templates/home.html
@@ -24,7 +24,7 @@
             <li class="dropdown">
                 <a href="" class="dropbtn">Data Query</a>
                 <div class="dropdown-content">
-                    <a href="query_posts.html">Query Posts</a>
+                    <a href="{{ url_for('query_posts') }}">Query Posts</a>
                     <a href="query_projects.html">Query Projects</a>
                 </div>
             </li>
