--- a/templates/query_posts_results.html
+++ b/templates/query_posts_results.html
@@ -5,23 +5,13 @@
 {% block content %}
 
 {% if results %}
-    <table>
+    <table border="1">
         <thead>
             <tr>
-                <th>Username</th>
-                <th>Social Media</th>
-                <th>Time Posted</th>
                 <th>Text</th>
-                <th>City</th>
-                <th>State</th>
-                <th>Country</th>
-                <th>Likes</th>
-                <th>Dislikes</th>
-                <th>Multimedia</th>
-                <th>Repost</th>
-                <th>Original Username</th>
-                <th>Original Social Media</th>
-                <th>Original Time</th>
+                <th>Social Media</th>
+                <th>Username</th>
+                <th>Time Posted</th>
             </tr>
         </thead>
         <tbody>
