Added Field, Project, and Result for Queries

--- a/templates/query_posts_results.html
+++ b/templates/query_posts_results.html
@@ -12,6 +12,9 @@
                 <th>Social Media</th>
                 <th>Username</th>
                 <th>Time Posted</th>
+                <th>Project</th>
+                <th>Field</th>
+                <th>Result</th>
             </tr>
         </thead>
         <tbody>
