implemented frontend and backend integration for query projects

--- a/templates/home.html
+++ b/templates/home.html
@@ -25,7 +25,7 @@
                 <a href="" class="dropbtn">Data Query</a>
                 <div class="dropdown-content">
                     <a href="{{ url_for('query_posts') }}">Query Posts</a>
-                    <a href="query_projects.html">Query Projects</a>
+                    <a href="{{ url_for('query_projects') }}">Query Projects</a>
                 </div>
             </li>
         </ul>
