--- a/templates/add_post.html
+++ b/templates/add_post.html
@@ -29,7 +29,7 @@
             <option value="" disabled selected></option>
             <option value="yes">Yes</option>
             <option value="no">No</option>
-        </select><br>
+        </select><br><br>
     </div>
 
     <input type="submit" value="Submit">
