--- a/templates/add_result.html
+++ b/templates/add_result.html
@@ -8,7 +8,7 @@
     <h2>Enter project name</h2>
     <label for="project_name">Project Name:</label> <input type="text" name="project_name" required><br><br>
 
-    <input type="submit" value="Submit">
+    <input type="submit" value="Next">
 </form>
 
 {% endblock %}
