--- a/templates/add_result2.html
+++ b/templates/add_result2.html
@@ -14,7 +14,7 @@
     <label for="time_posted">Time Posted:</label> <input type="datetime-local" name="time_posted" required><br><br>
 
     <h2>Enter result</h2>
-    <label for="result">Result:</label> <input type="text" name="result" required><br>
+    <label for="result">Result:</label> <input type="text" name="result" required><br><br>
 
     <input type="submit" value="Submit">
 </form>
