--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -26,7 +26,7 @@
         <option value="" disabled selected></option>
         <option value="yes">Yes</option>
         <option value="no">No</option>
-    </select><br>
+    </select><br><br>
 
     <input type="submit" value="Submit">
 </form>
