--- a/templates/query_projects.html
+++ b/templates/query_projects.html
@@ -7,7 +7,7 @@
 <h2>Query projects</h2>
 
 <form method="GET" action="{{ url_for('query_projects_results') }}">
-    <label for="project_name">Project Name:</label> <input type="text" name="project_name" required><br>
+    <label for="project_name">Project Name:</label> <input type="text" name="project_name" required><br><br>
 
     <input type="submit" value="Submit">
 </form>
