--- a/templates/query_posts.html
+++ b/templates/query_posts.html
@@ -12,7 +12,7 @@
     <label for="end_time">End Time:</label> <input type="datetime-local" name="end_time" required><br>
     <label for="username">Username:</label> <input type="text" name="username" required><br>
     <label for="first_name">First Name:</label> <input type="text" name="first_name" required><br>
-    <label for="last_name">Last Name:</label> <input type="text" name="last_name" required><br>
+    <label for="last_name">Last Name:</label> <input type="text" name="last_name" required><br><br>
 
     <input type="submit" value="Submit">
 </form>
