--- a/templates/query_posts.html
+++ b/templates/query_posts.html
@@ -7,12 +7,12 @@
 <h2>Enter post data for query:</h2>
 
 <form method="GET" action="{{ url_for('query_posts_results') }}">
-    <label for="social_media">Social Media Platform:</label> <input type="text" name="social_media" required><br>
-    <label for="start_time">Start Time:</label> <input type="datetime-local" name="start_time" required><br>
-    <label for="end_time">End Time:</label> <input type="datetime-local" name="end_time" required><br>
-    <label for="username">Username:</label> <input type="text" name="username" required><br>
-    <label for="first_name">First Name:</label> <input type="text" name="first_name" required><br>
-    <label for="last_name">Last Name:</label> <input type="text" name="last_name" required><br><br>
+    <label for="social_media">Social Media Platform:</label> <input type="text" name="social_media"><br>
+    <label for="start_time">Start Time:</label> <input type="datetime-local" name="start_time"><br>
+    <label for="end_time">End Time:</label> <input type="datetime-local" name="end_time"><br>
+    <label for="username">Username:</label> <input type="text" name="username"><br>
+    <label for="first_name">First Name:</label> <input type="text" name="first_name"><br>
+    <label for="last_name">Last Name:</label> <input type="text" name="last_name"><br><br>
 
     <input type="submit" value="Submit">
 </form>
