removed required tag on fields

--- a/templates/add_post.html
+++ b/templates/add_post.html
@@ -11,14 +11,14 @@
         <label for="social_media">Social Media Platform:</label> <input type="text" name="social_media" required><br>
         <label for="time_posted">Time Posted:</label> <input type="datetime-local" name="time_posted" required><br>
         <label for="text">Text:</label> <input type="text" name="text" required><br>
-        <label for="city">City:</label> <input type="text" name="city" required><br>
-        <label for="state">State:</label> <input type="text" name="state" required><br>
-        <label for="country">Country:</label> <input type="text" name="country" required><br>
-        <label for="num_likes">Number of Likes:</label> <input type="number" name="num_likes" required><br>
-        <label for="num_dislikes">Number of Dislikes:</label> <input type="number" name="num_dislikes" required><br>
+        <label for="city">City:</label> <input type="text" name="city"><br>
+        <label for="state">State:</label> <input type="text" name="state"><br>
+        <label for="country">Country:</label> <input type="text" name="country"><br>
+        <label for="num_likes">Number of Likes:</label> <input type="number" name="num_likes"><br>
+        <label for="num_dislikes">Number of Dislikes:</label> <input type="number" name="num_dislikes"><br>
 
         <label for="multimedia">Does the post include multimedia?</label>
-        <select name="multimedia" id="multimedia" required>
+        <select name="multimedia" id="multimedia">
             <option value="" disabled selected></option>
             <option value="yes">Yes</option>
             <option value="no">No</option>
