removed required tags

--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -8,21 +8,21 @@
 <form method="POST">
     <label for="username">Username:</label> <input type="text" name="username" required><br>
     <label for="social_media">Social Media:</label> <input type="text" name="social_media" required><br>
-    <label for="first_name">First Name:</label> <input type="text" name="first_name" required><br>
-    <label for="last_name">Last Name:</label> <input type="text" name="last_name" required><br>
-    <label for="country_birth">County of Birth:</label> <input type="text" name="country_birth" required><br>
-    <label for="country_residence">County of Residence:</label> <input type="text" name="country_residence" required><br>
-    <label for="age">Age:</label> <input type="number" name="age" required><br>
+    <label for="first_name">First Name:</label> <input type="text" name="first_name"><br>
+    <label for="last_name">Last Name:</label> <input type="text" name="last_name"><br>
+    <label for="country_birth">County of Birth:</label> <input type="text" name="country_birth"><br>
+    <label for="country_residence">County of Residence:</label> <input type="text" name="country_residence"><br>
+    <label for="age">Age:</label> <input type="number" name="age"><br>
 
     <label for="gender">Gender:</label>
-    <select name="gender" id="gender" required>
+    <select name="gender" id="gender">
         <option value="" disabled selected></option>
         <option value="female">Female</option>
         <option value="male">Male</option>
     </select><br>
 
     <label for="verified">Is the user verified?</label>
-    <select name="verified" id="verified" required>
+    <select name="verified" id="verified">
         <option value="" disabled selected></option>
         <option value="yes">Yes</option>
         <option value="no">No</option>
