added seconds to time inputs with tooltips

--- a/templates/add_post.html
+++ b/templates/add_post.html
@@ -9,7 +9,11 @@
     <div id="posts-container">
         <label for="username">Username:</label> <input type="text" name="username" required><br>
         <label for="social_media">Social Media Platform:</label> <input type="text" name="social_media" required><br>
-        <label for="time_posted">Time Posted:</label> <input type="datetime-local" name="time_posted" required><br>
+        
+        <label for="time_posted">Time Posted:
+            <span style="cursor: help;" title="If seconds not available, please input 00.">ℹ️</span>
+        </label> <input type="datetime-local" name="time_posted" step=1 required><br>
+        
         <label for="text">Text:</label> <input type="text" name="text" required><br>
         <label for="city">City:</label> <input type="text" name="city"><br>
         <label for="state">State:</label> <input type="text" name="state"><br>
