fixed title of webpage

--- a/templates/query_posts_results.html
+++ b/templates/query_posts_results.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Query Results - Database Manager{% endblock %}
+{% block title %}Query Posts Results - Database Manager{% endblock %}
 
 {% block content %}
 
