--- a/templates/query_projects_results.html
+++ b/templates/query_projects_results.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Query Posts - Database Manager{% endblock %}
+{% block title %}Query Projects - Database Manager{% endblock %}
 
 {% block content %}
 
